faltan los mensajes y projectos

--- a/index.html
+++ b/index.html
@@ -105,14 +105,15 @@
                         <img src="" alt="">
                     </div>
                     <div class="txt-sobre">
-                        <h2>UN PLACER, <span>SOY NICOLÁS LÓPEZ.</span></h2>
+                        <h2>UN PLACER, <span> SOY NICOLÁS LÓPEZ.</span></h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat atque maiores, perspiciatis expedita, optio, ipsum similique deleniti corrupti in culpa! Iure, voluptate libero fuga magni eum numquam iusto praesentium.</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni totam ipsum, sed distinctio dolorum vero, laboriosam quo nisi voluptatum laudantium quibusdam ducimus fugiat porro corrupti libero numquam eum adipisci ea.</p>
 
                         <div class="btn-social">
-                            <a href="#"><button><i class="bi bi-instagram"></i></button></a>
-                            <a href="#"><button><i class="bi bi-whatsapp"></i></button></a>
-                            <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                            <a href="mailto:nicolaslopez1995@hotmail.com"><button><i class="bi bi-envelope"></i></button></a>
+                            <a href="https://www.facebook.com/NikooLoopez/"><button><i class="bi bi-facebook"></i></button></a>
+                            <a href="https://www.instagram.com/nicolopez.12/"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="https://www.linkedin.com/in/nicolas-emanuel-lopez-2376b6260/"><button><i class="bi bi-linkedin"></i></button></a>
                         </div>
                     </div>
             </div>
@@ -123,13 +124,13 @@
                 <h2 class="titulo">MI <span>PORTAFOLIO.</span></h2>
                 <div class="flex">
                     <div class="img-portfolio" style="background-image: url(img/imagem.jpg)">
-                        <div class="overlay">Projeto 1</div>
+                        <div class="overlay">Projecto 1</div>
                     </div>
                     <div class="img-portfolio" style="background-image: url(img/imagem.jpg)">
-                        <div class="overlay">Projeto 2</div>
+                        <div class="overlay">Projecto 2</div>
                     </div>
                     <div class="img-portfolio" style="background-image: url(img/imagem.jpg)">
-                        <div class="overlay">Projeto 3</div>
+                        <div class="overlay">Projecto 3</div>
                     </div>
                 </div>
             </div>
@@ -155,7 +156,7 @@
                         <a href="https://www.instagram.com/nicolopez.12/"><button><i class="bi bi-instagram"></i></button></a>
                         <a href="https://www.linkedin.com/in/nicolas-emanuel-lopez-2376b6260/"><button><i class="bi bi-linkedin"></i></button></a>
                     </div>
-                </div>
+                    </div>
                 </div>
                 <div class="line-footer">
                     <p><i>Nicolás López.</i></p>
