--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portafolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -60,7 +60,8 @@
                     <div class="txt-topo-site">
                         <h1 class="creando">CREANDO IDEAS PARA SU</h1>
                         <h1><span class="digitando"></span></h1>
-                        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade intuitiva e otimização para resultados, estou pronto para criar a presença online dos seus sonhos.</p>
+                        <p>Creatividad e innovación van de la mano. Con una combinacion de diseño y funcionalidad que mejor se adapte a sus necesidades, estoy listo para crear, abarcar y lograr su idea para
+                        crecer exponencialmente.</p>
                         <div class="btn-contato">
                             <a href="#contacto">
                                 <button>Contáctame</button>
@@ -82,17 +83,17 @@
                     <div class="especialidades-box">
                         <i class="bi bi-code-square"></i>
                         <h3>Website</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero debitis temporibus quod. Sed non distinctio, laborum omnis totam architecto suscipit quibusdam aliquam ducimus qui perspiciatis, facere eligendi commodi tempore impedit?</p>
+                        <p>Su pagina web tendra todo lo que necesita para poder llamar la atención de sus clientes. Color, estilo, todo lo que usted solicite y crea mejor adaptar a sus necesidades.</p>
                     </div>
                     <div class="especialidades-box">
                         <i class="bi bi-journal-code"></i>
                         <h3>Administración</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero debitis temporibus quod. Sed non distinctio, laborum omnis totam architecto suscipit quibusdam aliquam ducimus qui perspiciatis, facere eligendi commodi tempore impedit?</p>
+                        <p>Desde la administración, puedo lograr a su medida un sistema para crear y modificar desde sus tareas diarias hasta su negocio o tienda virtual, facturación, stocks-precios, compras-ventas, asistencias e ingresos con graficos e interface personalizada.</p>
                     </div>
                     <div class="especialidades-box">
                         <i class="bi bi-wordpress"></i>
                         <h3>Blog</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero debitis temporibus quod. Sed non distinctio, laborum omnis totam architecto suscipit quibusdam aliquam ducimus qui perspiciatis, facere eligendi commodi tempore impedit?</p>
+                        <p>A disposición de usted, puede crecer con un blog que pueda mostrar al mundo sus intereses y proyectos.</p>
                     </div>
                 </div>
             </div>
@@ -106,7 +107,7 @@
                     </div>
                     <div class="txt-sobre">
                         <h2>UN PLACER, <span> SOY NICOLÁS LÓPEZ.</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat atque maiores, perspiciatis expedita, optio, ipsum similique deleniti corrupti in culpa! Iure, voluptate libero fuga magni eum numquam iusto praesentium.</p>
+                        <p>Tengo 28 años, me dedico a la informática desde hace mas de 10 años, siempre fui apasionado por lo que hago, </p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni totam ipsum, sed distinctio dolorum vero, laboriosam quo nisi voluptatum laudantium quibusdam ducimus fugiat porro corrupti libero numquam eum adipisci ea.</p>
 
                         <div class="btn-social">
@@ -124,13 +125,13 @@
                 <h2 class="titulo">MI <span>PORTAFOLIO.</span></h2>
                 <div class="flex">
                     <div class="img-portfolio" style="background-image: url(img/imagem.jpg)">
-                        <div class="overlay">Projecto 1</div>
+                        <div class="overlay">Proyecto 1</div>
                     </div>
                     <div class="img-portfolio" style="background-image: url(img/imagem.jpg)">
-                        <div class="overlay">Projecto 2</div>
+                        <div class="overlay">Proyecto 2</div>
                     </div>
                     <div class="img-portfolio" style="background-image: url(img/imagem.jpg)">
-                        <div class="overlay">Projecto 3</div>
+                        <div class="overlay">Proyecto 3</div>
                     </div>
                 </div>
             </div>
@@ -160,7 +161,7 @@
                 </div>
                 <div class="line-footer">
                     <p><i>Nicolás López.</i></p>
-                    <p><i class="bi bi-c-circle"> Copyright NicL 2023.</i></p>
+                    <p><i> Copyright NicL <i class="bi bi-c-circle"></i> 2023.</i></p>
                 </div>
             </div>
 </footer>
