--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
     
     <header>
-        <a name="inicio"></a>
         <div class="interface">
             <div class="logo">
-                <a href="index.html">
+                <a name="index">
                     <img src="img/logoAI.png" alt="Logo do Portfolio">
                 </a>
             </div>
@@ -23,7 +22,7 @@
                     <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#espe">Especialidades</a></li>
                     <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#projectos">Projectos</a></li>
+                    <li><a href="#proyectos">Proyectos</a></li>
                 </ul>
             </nav>
 
@@ -43,7 +42,7 @@
                             <li><a href="#inicio">Inicio</a></li>
                             <li><a href="#espe">Especialidades</a></li>
                             <li><a href="#sobre">Sobre</a></li>
-                            <li><a href="#projectos">Proyectos</a></li>
+                            <li><a href="#proyectos">Proyectos</a></li>
                             <li><a href="#contacto">Contacto</a></li>
                         </ul>
                     </nav>
@@ -55,6 +54,7 @@
 
 <main>
         <section class="topo-do-site">
+            <a name="inicio"></a>
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
@@ -93,7 +93,7 @@
                     <div class="especialidades-box">
                         <i class="bi bi-wordpress"></i>
                         <h3>Blog</h3>
-                        <p>A disposición de usted, puede crecer con un blog que pueda mostrar al mundo sus intereses y proyectos.</p>
+                        <p>Por pedido suyo, puede crecer con un blog que pueda mostrar al mundo sus intereses y proyectos.</p>
                     </div>
                 </div>
             </div>
@@ -107,32 +107,29 @@
                     </div>
                     <div class="txt-sobre">
                         <h2>UN PLACER, <span> SOY NICOLÁS LÓPEZ.</span></h2>
-                        <p>Tengo 28 años, me dedico a la informática desde hace mas de 10 años, siempre fui apasionado por lo que hago, </p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni totam ipsum, sed distinctio dolorum vero, laboriosam quo nisi voluptatum laudantium quibusdam ducimus fugiat porro corrupti libero numquam eum adipisci ea.</p>
+                        <p>Tengo 28 años, me dedico a la informática desde hace mas de 10 años, siempre fui apasionado por lo que hago, estoy interesado en nuevos desafios, quiero construir una carrera en programación full stack.</p>
+                        <p>Tengo estudios realizados en Python, SQL, HTML, CSS, JavaScript y Boostrap, aqui abajo podrás ver mis proyectos ya finalizados, quedo a su disposición por cualquier consulta no dude en escribirme, gracias.</p>
 
                         <div class="btn-social">
                             <a href="mailto:nicolaslopez1995@hotmail.com"><button><i class="bi bi-envelope"></i></button></a>
-                            <a href="https://www.facebook.com/NikooLoopez/"><button><i class="bi bi-facebook"></i></button></a>
-                            <a href="https://www.instagram.com/nicolopez.12/"><button><i class="bi bi-instagram"></i></button></a>
-                            <a href="https://www.linkedin.com/in/nicolas-emanuel-lopez-2376b6260/"><button><i class="bi bi-linkedin"></i></button></a>
+                            <a href="https://www.facebook.com/NikooLoopez/" target="_blank"><button><i class="bi bi-facebook"></i></button></a>
+                            <a href="https://www.instagram.com/nicolopez.12/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="https://www.linkedin.com/in/nicolas-emanuel-lopez-2376b6260/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
                         </div>
                     </div>
             </div>
         </section>
-        <a name="projectos"></a>
+        <a name="proyectos"></a>
         <section class="portfolio">
             <div class="interface">
                 <h2 class="titulo">MI <span>PORTAFOLIO.</span></h2>
                 <div class="flex">
-                    <div class="img-portfolio" style="background-image: url(img/imagem.jpg)">
-                        <div class="overlay">Proyecto 1</div>
-                    </div>
-                    <div class="img-portfolio" style="background-image: url(img/imagem.jpg)">
-                        <div class="overlay">Proyecto 2</div>
-                    </div>
-                    <div class="img-portfolio" style="background-image: url(img/imagem.jpg)">
-                        <div class="overlay">Proyecto 3</div>
-                    </div>
+                    <a href="https://crear-tareas.onrender.com" target="_blank">
+                        <div class="img-portfolio" style="background-image: url(img/PortadaTareas.PNG)">
+                            <div class="overlay">Sistema de administración</div>
+                        </div>
+                    </a>
+                    
                 </div>
             </div>
         </section>
@@ -149,13 +146,13 @@
                 <div class="line-footer borda">
                     <div class="flex">
                     <div class="logo-footer">
-                        <a href="#inicio"><img src="img/logoAI.png" alt="Logo"></a>
+                        <a href="#index"><img src="img/logoAI.png" alt="Logo"></a>
                     </div>
                     <div class="btn-social">
                         <a href="mailto:nicolaslopez1995@hotmail.com"><button><i class="bi bi-envelope"></i></button></a>
-                        <a href="https://www.facebook.com/NikooLoopez/"><button><i class="bi bi-facebook"></i></button></a>
-                        <a href="https://www.instagram.com/nicolopez.12/"><button><i class="bi bi-instagram"></i></button></a>
-                        <a href="https://www.linkedin.com/in/nicolas-emanuel-lopez-2376b6260/"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="https://www.facebook.com/NikooLoopez/" target="_blank"><button><i class="bi bi-facebook"></i></button></a>
+                        <a href="https://www.instagram.com/nicolopez.12/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                        <a href="https://www.linkedin.com/in/nicolas-emanuel-lopez-2376b6260/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
                     </div>
                     </div>
                 </div>
